# rust-tmp

./: .gitignore  Cargo.toml  Rocket.toml  rust-tmp.code-workspace  test.sh
migrations/20220502174500_user/: up.sql
src/: action.rs  main.rs  test.rs
src/business/: mod.rs  user_actions.rs
src/business/action/: action_data.rs  action_log.rs  auto_action.rs  business_action.rs  login_action.rs  logout_action.rs  mod.rs  web_action.rs
src/business/action_impl/: action_impl.rs  automatic_action_impl.rs  general_action_impl.rs  moderator_action_impl.rs  user_action_impl.rs
src/business/action_type/: action_type.rs  automatic_action_type.rs  general_action_type.rs  mod.rs  moderator_action_type.rs  user_action_type.rs
src/business/actions/: business_action.rs  mod.rs  user_actions.rs
src/business/data/: action_data.rs  automatic_action_data.rs  mod.rs  moderator_action_data.rs  user_action_data.rs
src/business/definition/: action.rs  action_helpers.rs
src/business/main/: login_action.rs  logout_action.rs
src/core/: mod.rs
src/core/action/: mod.rs
src/core/dao/: db_migration.rs
src/core/web/: mod.rs
src/data/: mod.rs
src/data/action/: action_data.rs  automatic_action_data.rs  moderator_action_data.rs  user_action_data.rs
src/data/action_type/: automatic_action_type.rs  general_action_type.rs  moderator_action_type.rs  user_action_type.rs
src/lib/: mod.rs
src/lib/base/: action.rs
src/lib/core/: action.rs  action_context.rs  action_core.rs  mod.rs
src/lib/data/: mod.rs  result.rs  str.rs
src/lib/traits/: async_from.rs  mod.rs
src/specific/: user_actions.rs
src/tests/: test_utils.rs
src/web/: mod.rs  web_root.rs
test/: test.rs
(+93 files in other folders)
