[package]
name = "tmp"
version = "0.1.0"
edition = "2021"
authors = ["lucas"]

[dependencies]
ctor = "0.1.20"
log = { version = "0.4", features = ["std", "serde"] }
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }

[dev-dependencies]
lazy_static = "1.4.0"