[package]
name = "tmp"
version = "0.1.0"
edition = "2021"
authors = ["lucas"]

[dependencies]
ctor = "0.1.20"
chrono = "0.4.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
futures = "0.3.21"
log = { version = "0.4", features = ["std", "serde"] }
reqwest = { version = "0.11.2", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24.0", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]

[dev-dependencies]
lazy_static = "1.4.0"
mockito = "0.7.0"